Closed Bug 83457 Opened 24 years ago Closed 23 years ago

Text overflow handling of URL bar search popup

Categories

(SeaMonkey :: Autocomplete, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.7

People

(Reporter: doctor__j, Assigned: hewitt)

Details

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Win98; en-US; rv:0.9+) Gecko/20010530 BuildID: 2001053004 Although there's little chance users would enter a long string of text on the URL bar for searching, this is not looking good. Please see the screenshot below. Few points to note: 1) Input text is not wrapped to second line when it overflows across the screen. Text on the furthest right is not shown. 2) Closing quote is missing for the input text. 3) Search popup box is clipped on the right. No black border bounding the right side.
Attached image Screenshot
autocomplete-->hewitt
Assignee: alecf → hewitt
Component: URL Bar → XP Apps: Autocomplete
Status: NEW → ASSIGNED
OS: Windows 98 → All
Priority: -- → P3
Hardware: PC → All
Target Milestone: --- → mozilla0.9.7
fixed
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
mass-verifying claudius' Fixed bugs which haven't changed since 2001.12.31. if you think this particular bug is not fixed, please make sure of the following before reopening: a. retest with a *recent* trunk build. b. query bugzilla to see if there's an existing, open bug (new, reopened, assigned) that covers your issue. c. if this does need to be reopened, make sure there are specific steps to reproduce (unless already provided and up-to-date). thanks! [set your search string in mail to "AmbassadorKoshNaranek" to filter out these messages.]
Status: RESOLVED → VERIFIED
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: