Bug #83457 --> show forwarded attachments contained inside inlined messages. the trick here is to not show the inlined message as a separate attachment but to still query the inlined attachment mime object for any external body parts. r=ducarroz sr=sspitzer a=asa